<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_activity_title">About Us</string>
    <string name="about_title">About</string>
    <string name="acknowledgement_icons_header">"This app uses Google's Material Design icons from https://material.io/icons/ that are licensed under the Apache 2.0 license, provided below."</string>
    <string name="acknowledgements_header">Acknowledgements</string>
    <string name="acknowledgements_pref_key">acknowledgements_pref_key</string>
    <string name="advertised_name">Advertised name</string>
    <string name="advertised_service_uuids">Advertised service UUIDs</string>
    <string name="advertisement_data_header">ADVERTISEMENT DATA</string>
    <string name="alert_dialog_title_disconnect_from_device">Disconnect from %1$s</string>
    <string name="app_theme_pref_key">app_theme</string>
    <string name="app_theme_title">App theme</string>
    <string name="app_version_header">App version</string>
    <string name="backspace">Backspace</string>
    <string name="by_punch_through_accessibility">By Punch Through</string>
    <string name="connecting_to_device">Connecting to device</string>
    <string name="device_information_header">DEVICE INFORMATION</string>
    <string name="device_mac_placeholder">MAC address</string>
    <string name="device_name_placeholder">Scan Result</string>
    <string name="dismiss">Dismiss</string>
    <string name="email_address_hint">Email Address</string>
    <string name="enjoying_lightblue_explorer">Enjoying LightBlue®?</string>
    <string name="event_log_date_time_placholder">EventLog Date and Time Details</string>
    <string name="event_log_event_tag_placeholder">EventLog Tag</string>
    <string name="event_log_text_placeholder">EventLog Text and Description</string>
    <string name="get_started">Get Started</string>
    <string name="help_and_feedback_description">Questions, comments or suggestions? Shoot us an email.</string>
    <string name="help_and_feedback_pref_key">help_and_feedback</string>
    <string name="help_and_feedback_title">Help and feedback</string>
    <string name="hex_char_0">0</string>
    <string name="hex_char_1">1</string>
    <string name="hex_char_2">2</string>
    <string name="hex_char_3">3</string>
    <string name="hex_char_4">4</string>
    <string name="hex_char_5">5</string>
    <string name="hex_char_6">6</string>
    <string name="hex_char_7">7</string>
    <string name="hex_char_8">8</string>
    <string name="hex_char_9">9</string>
    <string name="hex_char_a">A</string>
    <string name="hex_char_b">B</string>
    <string name="hex_char_c">C</string>
    <string name="hex_char_d">D</string>
    <string name="hex_char_e">E</string>
    <string name="hex_char_f">F</string>
    <string name="hex_keyboard_done">Done</string>
    <string name="learn_about_our_insights_into_ble">Learn about our insights into BLE.</string>
    <string name="log_title">Log</string>
    <string name="logo_accessibility">LightBlue</string>
    <string name="microchip_logo_description">Microchip logo</string>
    <string name="onboarding_explanation">"We're Punch Through, and we're experts in BLE. LightBlue® was developed years ago to help us test devices for our own clients, and we've been sharing the love with over one million users such as yourself ever since."</string>
    <string name="onboarding_title">Hello!</string>
    <string name="onboarding_welcome">Welcome to</string>
    <string name="privacy_policy_pref_key">privacy_policy_pref_key</string>
    <string name="privacy_policy_settings_title">Privacy policy</string>
    <string name="punch_through_header_image_content_description">Punch Through Header Image</string>
    <string name="refresh_title">Refresh</string>
    <string name="search_devices_title">Search by name / MAC address</string>
    <string name="send_usage_data_pref_key">send_usage_data</string>
    <string name="send_usage_data_summary">Help improve LightBlue® by sending anonymous usage data to Punch Through.</string>
    <string name="send_usage_data_title">Send usage data</string>
    <string name="settings_title">Settings</string>
    <string name="show_onboarding_description">Learn about LightBlue® and why we made it.</string>
    <string name="show_onboarding_pref_key">reset_onboarding</string>
    <string name="show_onboarding_title">Show onboarding interface</string>
    <string name="show_paired_devices_title">Show paired devices</string>
    <string name="signal_strength_accessibility">Signal strength indicator</string>
    <string name="signal_strength_placeholder">-69dBm</string>
    <string name="sort_title">Sort</string>
    <string name="subscribe">Subscribe</string>
    <string name="version_number">version_number_pref_key</string>
</resources>