<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:icon="@drawable/ic_search" android:id="@id/search_item" android:title="@string/search_devices_title" app:actionViewClass="android.widget.SearchView" app:showAsAction="always" />
    <item android:icon="@drawable/ic_sort" android:id="@id/sort_item" android:title="@string/sort_title" app:showAsAction="ifRoom" />
    <item android:id="@id/menu_refresh" android:title="@string/refresh_title" app:showAsAction="never" />
    <item android:id="@id/menu_settings" android:title="@string/settings_title" app:showAsAction="never" />
    <item android:id="@id/menu_log" android:title="@string/log_title" app:showAsAction="never" />
    <item android:id="@id/menu_about" android:title="@string/about_title" app:showAsAction="never" />
    <item android:id="@id/show_paired_devices" android:checked="true" android:title="@string/show_paired_devices_title" android:checkable="true" app:showAsAction="never" />
</menu>