<?xml version="1.0" encoding="utf-8"?>
<com.punchthrough.lightblueexplorer.views.HexKeyboard android:orientation="vertical" android:padding="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:id="@id/first_hex_keyboard_row" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <Button android:textColor="@color/colorPrimaryText" android:id="@id/hex_key_d" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/hex_char_d" />
        <Button android:textColor="@color/colorPrimaryText" android:id="@id/hex_key_e" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/hex_char_e" />
        <Button android:textColor="@color/colorPrimaryText" android:id="@id/hex_key_f" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/hex_char_f" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:id="@id/second_hex_keyboard_row" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <Button android:textColor="@color/colorPrimaryText" android:id="@id/hex_key_a" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/hex_char_a" />
        <Button android:textColor="@color/colorPrimaryText" android:id="@id/hex_key_b" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/hex_char_b" />
        <Button android:textColor="@color/colorPrimaryText" android:id="@id/hex_key_c" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/hex_char_c" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:id="@id/third_hex_keyboard_row" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <Button android:textColor="@color/colorPrimaryText" android:id="@id/hex_key_7" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/hex_char_7" />
        <Button android:textColor="@color/colorPrimaryText" android:id="@id/hex_key_8" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/hex_char_8" />
        <Button android:textColor="@color/colorPrimaryText" android:id="@id/hex_key_9" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/hex_char_9" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:id="@id/fourth_hex_keyboard_row" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <Button android:textColor="@color/colorPrimaryText" android:id="@id/hex_key_4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/hex_char_4" />
        <Button android:textColor="@color/colorPrimaryText" android:id="@id/hex_key_5" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/hex_char_5" />
        <Button android:textColor="@color/colorPrimaryText" android:id="@id/hex_key_6" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/hex_char_6" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:id="@id/fifth_hex_keyboard_row" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <Button android:textColor="@color/colorPrimaryText" android:id="@id/hex_key_1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/hex_char_1" />
        <Button android:textColor="@color/colorPrimaryText" android:id="@id/hex_key_2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/hex_char_2" />
        <Button android:textColor="@color/colorPrimaryText" android:id="@id/hex_key_3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/hex_char_3" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:id="@id/sixth_hex_keyboard_row" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <ImageButton android:id="@id/hex_key_backspace" android:layout_width="0.0dip" android:layout_height="fill_parent" android:src="@drawable/ic_backspace" android:tint="@color/colorPrimaryText" android:layout_weight="1.0" android:contentDescription="@string/backspace" />
        <Button android:textColor="@color/colorPrimaryText" android:id="@id/hex_key_0" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/hex_char_0" android:layout_weight="1.0" />
        <Button android:textColor="@color/colorPrimaryText" android:id="@id/hex_key_done" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/hex_keyboard_done" android:layout_weight="1.0" />
    </LinearLayout>
</com.punchthrough.lightblueexplorer.views.HexKeyboard>