<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:padding="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:id="@id/log_date_time_text_view" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/event_log_date_time_placholder" />
    <TextView android:textStyle="bold" android:id="@id/log_tag_text_view" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/event_log_event_tag_placeholder" />
    <TextView android:id="@id/log_content_text_view" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/event_log_text_placeholder" />
</LinearLayout>