<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:card_view="http://schemas.android.com/apk/res-auto">
    <androidx.cardview.widget.CardView android:id="@id/email_collector_card_view" android:focusableInTouchMode="true" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" card_view:cardCornerRadius="0.0dip" card_view:cardElevation="0.70000005dip" card_view:cardMaxElevation="1.0dip" card_view:cardPreventCornerOverlap="true" card_view:cardUseCompatPadding="true" card_view:contentPaddingBottom="0.0dip">
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent">
            <ImageView android:id="@id/card_banner" android:paddingTop="8.0dip" android:layout_width="fill_parent" android:layout_height="150.0dip" android:src="@drawable/punchthrough_banner" android:scaleType="centerCrop" android:layout_alignParentTop="true" android:contentDescription="@string/punch_through_header_image_content_description" />
            <TextView android:textSize="18.0sp" android:textStyle="bold" android:gravity="center_vertical" android:id="@id/card_banner_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/enjoying_lightblue_explorer" android:layout_below="@id/card_banner" android:paddingStart="8.0dip" android:paddingEnd="8.0dip" />
            <TextView android:textSize="18.0sp" android:gravity="center_vertical" android:id="@id/card_banner_subtitle" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:text="@string/learn_about_our_insights_into_ble" android:layout_below="@id/card_banner_title" android:paddingStart="8.0dip" android:paddingEnd="8.0dip" />
            <EditText android:id="@id/card_banner_email_field" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/email_address_hint" android:lines="1" android:layout_below="@id/card_banner_subtitle" android:inputType="textEmailAddress" android:imeOptions="actionDone" android:paddingStart="8.0dip" android:paddingEnd="8.0dip" />
            <Button android:textColor="@drawable/basic_button_text_color" android:id="@id/email_subscribe_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/subscribe" android:layout_below="@id/card_banner_email_field" android:layout_alignParentStart="true" android:backgroundTint="@drawable/basic_button_background_tint" />
            <ImageButton android:id="@id/card_banner_dismiss_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_cross" android:tint="@color/colorDismissGrey" android:layout_alignParentTop="true" android:contentDescription="@string/dismiss" android:layout_alignParentEnd="true" android:backgroundTint="@android:color/transparent" />
            <RelativeLayout android:id="@id/email_collector_progress_bar_container" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignTop="@id/card_banner" android:layout_alignBottom="@id/email_subscribe_button" android:elevation="4.0dip">
                <View android:background="@color/colorDarkBackground" android:layout_width="wrap_content" android:layout_height="fill_parent" android:alpha="0.4" />
                <ProgressBar android:id="@id/email_collector_progress_bar" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerInParent="true" android:indeterminateTint="@color/colorAccent" android:indeterminateTintMode="src_in" style="@android:style/Widget.Material.Light.ProgressBar" />
            </RelativeLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout android:id="@id/swipe_refresh_layout" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_below="@id/email_collector_card_view">
        <androidx.recyclerview.widget.RecyclerView android:id="@id/scan_results_recycler_view" android:layout_width="fill_parent" android:layout_height="fill_parent" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</RelativeLayout>