<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@id/loading_container" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_centerInParent="true">
        <ProgressBar android:id="@id/loading_device_detail_progress_bar" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerHorizontal="true" android:indeterminateTint="@color/colorAccent" android:indeterminateTintMode="src_in" style="@android:style/Widget.Material.Light.ProgressBar" />
        <TextView android:id="@id/loading_device_detail_description" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/connecting_to_device" android:layout_below="@id/loading_device_detail_progress_bar" android:layout_centerHorizontal="true" />
    </RelativeLayout>
    <LinearLayout android:orientation="vertical" android:id="@id/device_detail_container" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <androidx.core.widget.NestedScrollView android:layout_width="fill_parent" android:layout_height="fill_parent">
            <LinearLayout android:orientation="vertical" android:id="@id/device_detail_content_view" android:layout_width="fill_parent" android:layout_height="fill_parent">
                <TextView android:textSize="20.0sp" android:textStyle="bold" android:id="@id/advertisement_data_header" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/advertisement_data_header" android:layout_marginStart="16.0dip" />
                <View android:background="@android:color/darker_gray" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginTop="4.0dip" android:layout_marginBottom="4.0dip" />
                <androidx.recyclerview.widget.RecyclerView android:id="@id/device_advertising_data_list" android:layout_width="fill_parent" android:layout_height="wrap_content" />
                <TextView android:textSize="20.0sp" android:textStyle="bold" android:id="@id/device_information_header" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/device_information_header" android:layout_marginStart="16.0dip" />
                <View android:background="@android:color/darker_gray" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginTop="4.0dip" android:layout_marginBottom="4.0dip" />
                <androidx.recyclerview.widget.RecyclerView android:id="@id/device_information_list" android:layout_width="fill_parent" android:layout_height="wrap_content" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>
</RelativeLayout>